# pdfcat

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONSOLIDATED_LEARNINGS.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  NEW_FEATURES.md  PLAN.md  PLAN2.md  PLAN_REVIEW.md  README.md  TMUX_SIXEL_GUIDE.md  TOP_10_IMPROVEMENTS.md  VERIFICATION_REPORT.txt  WHATS_NEXT.md  bump_version.py  coverage.xml  debug_startup.py  keyboard_input.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  termpdf.py  verify_implementation.py  verify_implementation.sh
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Formula/: pdfcat.rb
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md
src/pdfcat/: __init__.py  actions.py  app.py  bib.py  cache.py  constants.py  core.py  document.py  document_labels.py  document_rendering.py  document_stream.py  executor.py  input_handler.py  keyboard_input.py  neovim_bridge.py  note_naming.py  notes.py  page_state.py  presenter_links.py  presenter_views.py  renderers.py  runtime_context.py  ui.py  workers.py
tests/: beamer.tex  conftest.py  test_buffers.py  test_cache.py  test_cache_pytest.py  test_executor_pytest.py  test_input_handler.py  test_input_handler_pytest.py  test_navigator.py  test_navigator_pytest.py  test_no_blink_pytest.py  test_no_blink_update.py  test_note_security.py  test_note_slug.py  test_notes_pytest.py  test_pytest_fixtures.py  test_renderer.py  test_renderer_protocol_detection.py  test_rendering_logic.py  test_security.py  test_security_pytest.py  test_thread_safety.py  test_thread_safety_pytest.py  test_timg_binary_contract.py  test_timg_compatibility.py  test_timg_direct.sh  test_tint_mode.py  test_tint_mode_pytest.py
tests/integration/: test_e2e.py  test_viewer.py
