[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfcat"
dynamic = ["version"]
description = "Keyboard-first PDF reader for terminal workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Marcos Romero Lamas" },
]
maintainers = [
    { name = "Marcos Romero Lamas" },
]
keywords = ["pdf", "viewer", "terminal", "tui", "kitty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "PyMuPDF>=1.23.0,<2.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "pdfrw>=0.4,<1.0",
    "pyperclip>=1.8.0,<2.0.0",
    "pybtex>=0.24.0,<1.0.0",
    "pynvim>=0.5.0,<1.0.0",
    "roman>=4.0,<5.0",
    "pagelabels>=1.2.0,<2.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-timeout>=2.1.0",
    "reportlab>=4.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.287",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/marromlam/pdfcat"
Documentation = "https://github.com/marromlam/pdfcat#readme"
Repository = "https://github.com/marromlam/pdfcat"
"Bug Tracker" = "https://github.com/marromlam/pdfcat/issues"

[project.scripts]
pdfcat = "pdfcat.app:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "pdfcat.constants.__version__" }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/pdfcat",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
